--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,32 @@
 body {
+  margin: 0;
   color: white;
   height: 100vh;
   display: flex;
   align-items: center;
   font-family: "Poppins", sans-serif;
+  transition: background 1s;
   background: #049098;
   background: linear-gradient(54deg, #049098 0%, #096787 41%, #096386 50%, #096687 57%, #049098 100%);
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.transitionCurtain {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  background-color: white;
+  transition: opacity 0.8s;
+  z-index: -1;
+}
+
+.curtainOpacityAppear {
+  opacity: 1;
+}
+
+.curtainOpacityDissapear {
+  opacity: 0;
 }
 
 .main-container {
@@ -15,31 +36,64 @@ body {
   height: 500px;
   margin: 0 auto;
 }
+@media (max-width: 700px) {
+  .main-container {
+    grid-template-columns: auto;
+    margin: 0 20px;
+  }
+}
 .main-container h2 {
-  justify-self: center;
   align-self: center;
   font-size: 32px;
   margin: 0;
-  transition: font-size 0.8s;
+  transition: all 1s;
 }
-.main-container h2:hover {
-  font-size: 34px;
+
+a {
+  text-decoration: none;
+  color: white;
+}
+a:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: white;
+  transition: width 0.5s;
+}
+a:hover::after {
+  width: 100%;
 }
 
 .englishHi {
   grid-column: 2;
   grid-row: 1;
+  justify-self: center;
 }
 
 .spanishHi {
   grid-column: 1;
   grid-row: 2;
+  justify-self: center;
+}
+@media (max-width: 700px) {
+  .spanishHi {
+    grid-column: 1/span 2;
+    justify-self: start;
+  }
 }
 
 .japaneseHi {
   grid-column: 3;
   grid-row: 3;
   font-family: "Noto Serif JP", serif;
+  justify-self: center;
+}
+@media (max-width: 700px) {
+  .japaneseHi {
+    grid-column: 2/span 2;
+    justify-self: end;
+  }
 }
 
 .whoAmI {
@@ -48,6 +102,23 @@ body {
   align-self: center;
   text-align: center;
   font-size: 16px;
+  transition: opacity 1s;
+}
+
+.dissapear {
+  opacity: 0;
+}
+
+.appear {
+  opacity: 1;
+}
+
+.show {
+  display: none;
+}
+
+.hide {
+  display: block;
 }
 
 /*# sourceMappingURL=styles.css.map */
