--- a/mainPageStyles.sass
+++ b/mainPageStyles.sass
@@ -34,9 +34,27 @@ p
     &.opacityDisappear
         opacity: 0
 
+.diagonalContainer
+    position: absolute
+    top: 0
+    left: 0
+    z-index: -1
+    .skewLeft
+        height: 500px
+        width: 100vw
+        background-color: $dark-color
+        transform: skewY(-25deg) translateY(-550px)
+    .skewRight
+        height: 300px
+        width: 100vw
+        background-color: $main-color
+        transform: skewY(30deg) translateY(-250px)
+        
+    
+
 .mainPageContent
     color: black
-    margin: 10px 50px
+    margin: 0 50px
     display: grid
     grid-template-columns: 50fr 50fr
     grid-column-gap: 50px
