--- a/mainPageStyles.sass
+++ b/mainPageStyles.sass
@@ -14,9 +14,7 @@ body
     height: 100vh
 
 h1
-    color: $dark-color
-    span
-        color: $main-color
+    color: $main-color
 
 p
     color: grey
@@ -34,23 +32,28 @@ p
     &.opacityDisappear
         opacity: 0
 
-.diagonalContainer
+.mainPage
+    position: relative
+
+.skewRight
     position: absolute
     top: 0
     left: 0
+    height: 600px
+    width: 100vw
+    background-color: $dark-color
+    transform: skewY(-30deg) translateY(-300px)
     z-index: -1
-    .skewLeft
-        height: 500px
-        width: 100vw
-        background-color: $dark-color
-        transform: skewY(-25deg) translateY(-550px)
-    .skewRight
-        height: 300px
-        width: 100vw
-        background-color: $main-color
-        transform: skewY(30deg) translateY(-250px)
-        
-    
+
+.skewLeft
+    position: absolute
+    top: 0
+    right: 0
+    height: 350px
+    width: 100vw
+    background-color: $main-color
+    transform: skewY(30deg) translateY(-300px)
+    z-index: -2
 
 .mainPageContent
     color: black
@@ -61,8 +64,10 @@ p
     @media(max-width: 700px)
 
 .leftColumn
+    height: 100vh
     display: flex
     flex-direction: column
+    justify-content: space-evenly
     @media(max-width: 700px)
         grid-column: 1 / span 2
         flex-direction: column-reverse
@@ -70,14 +75,31 @@ p
         text-align: justify
 
 .rightColumn
+    background-color: rgba(255,255,255,0.3)
+    padding: 20px
+    border-top: 1px solid $dark-color
+    border-left: 1px solid $dark-color
+    border-bottom: 1px solid $main-color
+    border-right: 1px solid $main-color
+    align-self: center
+    height: 80vh
+    overflow: scroll
     @media(max-width: 700px)
         grid-column: 1 / span 2
+        padding: 0
+        border: none
+        height: 100%
+        overflow: auto
 
 .menu
     list-style: none
     margin: 0
     padding: 0
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
     li
+        border: 1px solid $main-color
         cursor: pointer
         width: 170px
         padding: 10px
