--- a/mainPageStyles.css
+++ b/mainPageStyles.css
@@ -40,7 +40,17 @@ p {
   height: 600px;
   width: 100vw;
   background-color: #0c084c;
-  transform: skewY(-30deg) translateY(-300px);
+  transform: skewY(-30deg) translateY(-350px);
+  z-index: -1;
+}
+
+.skewContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
   z-index: -1;
 }
 
@@ -78,24 +88,10 @@ p {
   text-align: justify;
 }
 
-.rightColumn {
-  background-color: rgba(255, 255, 255, 0.3);
-  padding: 20px;
-  border-top: 1px solid #0c084c;
-  border-left: 1px solid #0c084c;
-  border-bottom: 1px solid #096386;
-  border-right: 1px solid #096386;
-  align-self: center;
-  height: 80vh;
-  overflow: scroll;
-}
 @media (max-width: 700px) {
   .rightColumn {
     grid-column: 1/span 2;
-    padding: 0;
-    border: none;
     height: 100%;
-    overflow: auto;
   }
 }
 
