--- a/mainPageStyles.sass
+++ b/mainPageStyles.sass
@@ -42,7 +42,16 @@ p
     height: 600px
     width: 100vw
     background-color: $dark-color
-    transform: skewY(-30deg) translateY(-300px)
+    transform: skewY(-30deg) translateY(-350px)
+    z-index: -1
+
+.skewContainer
+    position: absolute
+    top: 0
+    left: 0
+    height: 100vh
+    width: 100%
+    overflow: hidden
     z-index: -1
 
 .skewLeft
@@ -75,21 +84,9 @@ p
         text-align: justify
 
 .rightColumn
-    background-color: rgba(255,255,255,0.3)
-    padding: 20px
-    border-top: 1px solid $dark-color
-    border-left: 1px solid $dark-color
-    border-bottom: 1px solid $main-color
-    border-right: 1px solid $main-color
-    align-self: center
-    height: 80vh
-    overflow: scroll
     @media(max-width: 700px)
         grid-column: 1 / span 2
-        padding: 0
-        border: none
         height: 100%
-        overflow: auto
 
 .menu
     list-style: none
