--- a/mainPageStyles.css
+++ b/mainPageStyles.css
@@ -29,10 +29,6 @@ p {
   opacity: 0;
 }
 
-.mainPage {
-  position: relative;
-}
-
 .skewRight {
   position: absolute;
   top: 0;
@@ -66,21 +62,36 @@ p {
 }
 
 .mainPageContent {
-  color: black;
   margin: 0 50px;
-  display: grid;
-  grid-template-columns: 50fr 50fr;
-  grid-column-gap: 50px;
+  display: flex;
+  flex-direction: row-reverse;
 }
+@media (max-width: 700px) {
+  .mainPageContent {
+    display: block;
+  }
+}
+
 .leftColumn {
+  width: 40vw;
+  position: fixed;
+  top: 0;
+  left: 50px;
+}
+@media (max-width: 700px) {
+  .leftColumn {
+    position: static;
+    width: 100%;
+  }
+}
+.leftColumn .leftColumnContent {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 @media (max-width: 700px) {
-  .leftColumn {
-    grid-column: 1/span 2;
+  .leftColumn .leftColumnContent {
     flex-direction: column-reverse;
   }
 }
@@ -88,10 +99,13 @@ p {
   text-align: justify;
 }
 
+.rightColumn {
+  flex-basis: 50%;
+  align-self: flex-end;
+}
 @media (max-width: 700px) {
   .rightColumn {
-    grid-column: 1/span 2;
-    height: 100%;
+    width: 100%;
   }
 }
 
@@ -99,16 +113,14 @@ p {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 50fr 50fr;
+  grid-gap: 10px;
 }
 .menu li {
   border: 1px solid #096386;
   cursor: pointer;
-  width: 170px;
   padding: 10px;
-  margin: 5px 0;
   background-color: #096386;
 }
 .menu li:hover {
