--- a/mainPageStyles.css
+++ b/mainPageStyles.css
@@ -119,16 +119,18 @@ p {
 }
 .menu li {
   border: 1px solid #096386;
-  cursor: pointer;
-  padding: 10px;
   background-color: #096386;
 }
 .menu li:hover {
   background-color: #0c084c;
 }
 .menu a {
+  display: inline-block;
+  padding: 10px;
   color: white;
   text-decoration: none;
+  width: 100%;
+  height: 100%;
 }
 
 .show {
