--- a/mainPageStyles.sass
+++ b/mainPageStyles.sass
@@ -105,14 +105,16 @@ p
     grid-gap: 10px
     li
         border: 1px solid $main-color
-        cursor: pointer
-        padding: 10px
         background-color: $main-color
         &:hover
             background-color: $dark-color
     a
+        display: inline-block
+        padding: 10px
         color: white
         text-decoration: none
+        width: 100%
+        height: 100%
 
 .show
     display: block
