--- a/mainPageStyles.sass
+++ b/mainPageStyles.sass
@@ -95,7 +95,8 @@ p
         width: 100%    
 
 .menuContainer
-    position: relative
+    @media(max-width: 700px)
+        position: relative
 
 .menu
     list-style: none
@@ -111,8 +112,8 @@ p
     li
         border: 1px solid $main-color
         background-color: $main-color
-        width: calc(100vw - 100px)
         @media(max-width: 700px)
+            width: calc(100vw - 100px)
             border-bottom: 1px solid grey
             border-top: none
             border-left: none
